<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.techbuzz.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.techbuzz.ui.updates.UpdatesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_updates" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.techbuzz.ui.fields.FieldsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_field" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.techbuzz.ui.myaccount.MyaccountFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_myaccount" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.techbuzz.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

   <!-- <fragment
        android:id="@+id/nav_send"
        android:name="com.techbuzz.ui.fields.FieldsFragmentnt"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" /> -->
</navigation>