<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/colorPrimary">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/attach"
                        android:layout_marginStart="20dp"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_attach"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="70dp"
                        android:text="@string/attach"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/white">


                </LinearLayout>

                <ScrollView
                    android:orientation="vertical"
                    android:layout_margin="15dp"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="25dp"
                        android:orientation="horizontal"
                        android:layout_height="50dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:background="@color/colorPrimary"
                            android:src="@drawable/logo"/>

                        <EditText
                            android:id="@+id/postusername"
                            android:inputType="textEmailAddress"
                            android:hint="@string/username"
                            android:paddingStart="15dp"
                            android:paddingEnd="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>


                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:layout_height="50dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:background="@color/colorPrimary"
                            android:src="@drawable/logo"/>
                        <EditText
                            android:id="@+id/postfield"
                            android:inputType="textPassword"
                            android:hint="@string/entfield"
                            android:paddingStart="15dp"
                            android:paddingEnd="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>


                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:layout_height="150dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:background="@color/colorPrimary"
                            android:src="@drawable/logo"/>
                        <EditText
                            android:id="@+id/postmessage"
                            android:inputType="textPassword"
                            android:hint="@string/message"
                            android:paddingStart="15dp"
                            android:paddingEnd="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>


                    </LinearLayout>


                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_margin="15dp"
                        android:orientation="horizontal"
                        android:layout_height="50dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:background="@color/colorPrimary"
                            android:src="@drawable/logo"/>
                        <Button
                            android:id="@+id/post"
                            android:text="@string/postt"
                            android:textColor="@color/last"
                            android:background="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>


                    </LinearLayout>
                    </LinearLayout>

                </ScrollView>




            </LinearLayout>

        </androidx.cardview.widget.CardView>

</LinearLayout>