<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".CreateAccount">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/colorPrimary">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo"
                    tools:ignore="ContentDescription" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/white">


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:layout_height="50dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/logo"/>

                    <EditText
                        android:id="@+id/email"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:paddingStart="15dp"
                        android:paddingEnd="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>


                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:layout_height="50dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/logo"/>
                    <EditText
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:paddingStart="15dp"
                        android:paddingEnd="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>


                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:layout_height="50dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/logo"/>
                    <EditText
                        android:id="@+id/username"
                        android:inputType="textPassword"
                        android:hint="@string/username"
                        android:paddingStart="15dp"
                        android:paddingEnd="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>


                </LinearLayout>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="15dp"
                    android:orientation="horizontal"
                    android:layout_height="50dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/logo"/>
                    <Button
                        android:id="@+id/creaccount"
                        android:text="@string/creater"
                        android:textColor="@color/last"
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>


                </LinearLayout>

            </LinearLayout>




        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>