<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/medium"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:paddingStart="5dp"
                android:layout_width="138dp"
                android:layout_height="match_parent"
                android:src="@drawable/medium" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:paddingStart="25dp"
                    android:paddingEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <TextView
                    android:paddingStart="25dp"
                    android:paddingEnd="5dp"
                    android:text="@string/medium"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/stack"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:paddingStart="5dp"
                android:layout_width="138dp"
                android:layout_height="match_parent"
                android:src="@drawable/medium" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:paddingStart="25dp"
                    android:paddingEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <TextView
                    android:paddingStart="25dp"
                    android:paddingEnd="5dp"
                    android:text="@string/stackover"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/linked"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:paddingStart="5dp"
                android:layout_width="138dp"
                android:layout_height="match_parent"
                android:src="@drawable/medium" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:paddingStart="25dp"
                    android:paddingEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <TextView
                    android:paddingStart="25dp"
                    android:paddingEnd="5dp"
                    android:text="@string/linkedin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/quora"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:paddingStart="5dp"
                android:layout_width="138dp"
                android:layout_height="match_parent"
                android:src="@drawable/medium" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:paddingStart="25dp"
                    android:paddingEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <TextView
                    android:paddingStart="25dp"
                    android:paddingEnd="5dp"
                    android:text="@string/quora"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>