<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linear"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/colorPrimary">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo"
                    tools:ignore="ContentDescription" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/white">


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_margin="3dp"
                    android:layout_height="175dp">

                    <ImageView
                        android:id="@+id/fields"
                        android:layout_width="135dp"
                        android:layout_height="match_parent"
                        android:src="@mipmap/fields"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />


                    <ImageView
                        android:id="@+id/update"
                        android:layout_width="125dp"
                        android:layout_height="174dp"
                        android:src="@drawable/ic_updateround"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.88"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="30dp">

                    <TextView
                        android:layout_width="135dp"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:text="@string/fields"/>

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:text="@string/menu_gallery"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    >

                    <ImageView
                        android:layout_width="150dp"
                        android:src="@mipmap/about"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:paddingTop="80dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:text="@string/menu_tools"/>
                </LinearLayout>


            </LinearLayout>




        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>